--- a/App/app/src/main/res/layout/content_main.xml
+++ b/App/app/src/main/res/layout/content_main.xml
@@ -16,5 +16,11 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    
+    <fragment    android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context="bike_s.arduino.myapplication.MainActivity" />
 
 </android.support.constraint.ConstraintLayout>
