--- a/App/app/src/main/res/menu/activity_main_drawer.xml
+++ b/App/app/src/main/res/menu/activity_main_drawer.xml
@@ -24,7 +24,10 @@
                 android:id="@+id/nav_nav"
                 android:icon="@drawable/ic_menu_send"
                 android:title="Nawiguj do stacji" />
+            <item
+                android:id="@+id/btnLogout"
+                android:icon="@drawable/ic_logout"
+                android:title="Logout" />
         </menu>
     </item>
-
 </menu>
