--- a/App/app/src/main/res/layout/nav_header_main.xml
+++ b/App/app/src/main/res/layout/nav_header_main.xml
@@ -12,28 +12,26 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="36dp"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         app:srcCompat="@mipmap/ic_launcher_round" />
 
-
-
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/userName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/imageView"
         android:layout_below="@+id/imageView"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="Patryk G."
+        android:text="User"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/distanceCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/textView2"
-        android:layout_below="@+id/textView2"
+        android:layout_alignStart="@+id/userName"
+        android:layout_below="@+id/userName"
         android:text="Dzisiaj przejechałeś: 3.4km" />
 </RelativeLayout>
