--- a/App/app/src/main/res/layout/nav_header_main.xml
+++ b/App/app/src/main/res/layout/nav_header_main.xml
@@ -13,7 +13,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="24dp"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         app:srcCompat="@mipmap/ic_launcher_round" />
 
@@ -34,4 +34,11 @@
         android:layout_alignStart="@+id/userName"
         android:layout_below="@+id/userName"
         android:text="Dzisiaj przejechałeś: 3.4km" />
+
+    <TextView
+        android:id="@+id/codeRemind"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/distanceCount"
+        android:layout_below="@+id/distanceCount" />
 </RelativeLayout>
