Zmieniono wyświetlanie stacji na postać listview, dodano wyszukiwarkę stacji zmieniono "wolne" stringi na strings.xml

--- a/App/app/src/main/res/layout/nav_header_main.xml
+++ b/App/app/src/main/res/layout/nav_header_main.xml
@@ -33,7 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/userName"
         android:layout_below="@+id/userName"
-        android:text="Dzisiaj przejechałeś: 3.4km" />
+        android:text="@string/dist_info" />
 
     <TextView
         android:id="@+id/codeRemind"
