--- a/App/app/src/main/res/layout/activity_login.xml
+++ b/App/app/src/main/res/layout/activity_login.xml
@@ -23,7 +23,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="50dp"
                 android:padding="20dp"
-                android:text="Bike_s Application"
+                android:text="@string/appName"
                 android:textColor="@color/white"
                 android:textSize="30sp" />
 
@@ -35,7 +35,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="20dp"
-                android:hint="User Name"
+                android:hint="@string/user_name"
                 android:inputType="textEmailAddress"
                 android:singleLine="true"
                 android:textColorHint="@color/white" />
@@ -47,7 +47,7 @@
                 android:layout_marginBottom="10dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:hint="Password"
+                android:hint="@string/password"
                 android:inputType="textPassword"
                 android:singleLine="true"
                 android:textColorHint="@color/white" />
@@ -60,7 +60,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:onClick="login"
-                android:text="Login" />
+                android:text="@string/login" />
 
             <Button
                 android:id="@+id/btnReg"
@@ -70,7 +70,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:onClick="register"
-                android:text="Register" />
+                android:text="@string/register" />
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
