--- a/App/app/src/main/res/layout/activity_register.xml
+++ b/App/app/src/main/res/layout/activity_register.xml
@@ -23,7 +23,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="50dp"
                 android:padding="20dp"
-                android:text="Bike_s Application"
+                android:text="@string/appName"
                 android:textColor="@color/white"
                 android:textSize="30sp" />
 
@@ -35,7 +35,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="20dp"
-                android:hint="User Name"
+                android:hint="@string/user_name"
                 android:inputType="textEmailAddress"
                 android:singleLine="true"
                 android:textColorHint="@color/white" />
@@ -60,13 +60,13 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:onClick="register"
-                android:text="Register" />
+                android:text="@string/register" />
 
             <TextView
                 android:id="@+id/tvLogin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Back to login"
+                android:text="@string/back_to_login"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="@color/white"
                 android:gravity="center_horizontal"/>
